--- a/Kasa/src/styles/Collapse.scss
+++ b/Kasa/src/styles/Collapse.scss
@@ -1,114 +1,70 @@
-.all-collapse{
-    // margin-left: 5%;
-    // margin-right: 1%;
-    width: 80%;
-    position: relative;
-    @media (max-width: 768px) {
-        width: 92%;
-
-}
-}
-
-.collapse{
-    transition-duration: 0.5s;
-    transform: rotate(180deg);
-    background-color: #ff6060;
-    cursor: pointer;
-    height: 40px;
-    padding-bottom: 6px;
-
-}
-
-.uncollapse{
-    background-color: #FF6060;
-    transition-duration: 0.5s;
-    transform: rotate(360deg);
-    cursor: pointer;
-    height: 40px;
-    padding-top: 3px;
-    @media (max-width: 768px) {
-        height: 33px;
-
-    }
-
-
-
-}
-
-.conteneur-collapse{
-    display: grid;
-    justify-items: center;
-    margin: -2% 0% 3% 0%;
-    @media (max-width: 768px) {
-        margin: 13% 0% 3% 0%;
-
-    }
-
-}
-
-.collapse-content{
-    background-color: #F6F6F6;
-    border-radius: 5px;
-    margin: 20px 0px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    transition: all 0.5s; /* Ajout d'une transition pour l'ensemble des propriétés CSS */
-
-}
-
-
-.collapse-banner{
-    background-color: #FF6060;
-    height: 48px;
-    border-radius: 5px;
-    margin-bottom: -12px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 3px 20px 10px 15px;
-
-}
-
-.collapse-banner-name{
+.collapse-all {
+    font-size: 18px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    width: 100%;
     overflow: hidden;
-    p{
-        color: white;
+    @media (max-width: 768px) {
+        margin: 3% 0% 0% 0%;
+    }
+    p {
+        margin: 0;
+    }
+    
+    .collapse-title {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
         font-weight: 700;
-        font-size: 24px;
-        line-height: 1px;
+        color: white;
+        background-color: #ff6060;
+        border-radius: 5px;
+        padding: 10px 20px 10px 15px;
+        z-index: 1;
+        @media (max-width: 768px) {
+            margin: 0% 5% 0% 5%;
+        }
+        img {
+            width: 25px;
+            height: 25px;
+            transition: transform 0.5s;
+            &.rotated {
+                transform: rotate(-180deg);
+              }
+        }
+    }
 
+    .collapse-text {
+        position: relative;
+        top: -2.5%;
+        width: 100%;
+        height: 0;
+        display: flex;
+        flex-direction: column;
+        background-color: #f6f6f6;
+        border-radius: 0 0 5px 5px;
+        transition: height 1s;
+
+        #text-container {
+            
+            height: 0;
+            font-size: 18px;
+            line-height: 1.5em;
+            margin-top: -150%;
+            padding: 1.5em 1em;
+            transition: height 1s,
+                margin-top 1s,
+                transform 1s;
+
+            &.expanded {
+                margin-top: 0%;
+                height: 100%;
+
+            }
+        }
+    }
+
+    .collapse-expanded {
+        height: 100%;
     }
 }
-
-.content{
-    color: #000;
-    list-style: none; // suppression des puces dans liste
-    line-height: 150%;
-    font-weight: 500;
-    padding-top: 8px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 7px;
-    max-height: 0;
-    opacity: 0;
-    overflow: hidden;
-    height: 255px;
-    text-align: justify;
-    transition:
-        max-height 3s ease,
-        opacity 1s ease; /* Transition pour max-height et opacity */
-  }
-
-.show{
-    opacity: 1; /* Changement d'opacité pour rendre visible le contenu */
-    max-height: 499px; /* Valeur maximale de la hauteur*/
-    height:325px;
-    // height: 420px;
-    @media (max-width: 768px) {
-        font-size: 14px;
-        height: 100;
-
-    }
-  }
-  
