--- a/Kasa/src/styles/Footer.scss
+++ b/Kasa/src/styles/Footer.scss
@@ -14,7 +14,7 @@ footer{
     @media (max-width: 768px) {
         height: 23vh;
         width: 100vw;
-        margin-top: 38%;
+        margin-top: 5%;
 }
 
 }
